# agent-workflow

./: .gitignore  AGENTS.md  CLAUDE.md  DUSTY.md  README.md  dependency_graph.py  event_log.py  plan-agent-override.md  pyproject.toml  queue_runner.py  state_store.py  work_item.py  workflow_run.py
.claude/commands/: agent-workflow.md  architecture.md  module-breakdown.md  req-understand.md  spec-wt.md
.pytmp/test_codex_cli_resolves_comman0/: .env
.pytmp/test_parse_claude_usage_from_s0/: test.stream.jsonl
.pytmp/test_parse_claude_usage_no_res0/: no_result.stream.jsonl
docs/: .gitignore  protocol-recovery-design.md  replacement-parity.md  runtime-v2-design.md
examples/plan-review-advise-execute/: README.md  outputs.yaml  roles.yaml  workflow.yaml
examples/standard-dev/: mock_script.yaml  outputs.yaml
memory/: MEMORY.md  agent-workflow-windows-fixes.md  claude-permission-mode-semantics.md  memory-location-project-dir.md  module-breakdown-gate-and-collect-gaps.md  preexisting-test-debt.md  run-command-blocks-no-detach.md  spec-dev-review-guard-loop.md  workflow-snapshot-freeze-boundary.md  worktree-staging-resolves-against-project-root.md
schemas/: artifact_registry_entry.schema.json  workflow_checkpoint.schema.json  workflow_event.schema.json
src/agent_workflow/: __init__.py  cli.py
src/agent_workflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
strategy_research/: __init__.py  workflow.py
tests/: __init__.py
tests/integration/: test_chain_workflow.py  test_diamond_workflow.py  (+10 more)
workflows/: .gitignore
(+380 files in other folders)
